# sox_ng

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.md  README.osx  README.sh  README.win32  RULES-issues.md  RULES-wiki.md  RULES.md  aclocal.m4  config.status  configure  configure.ac  cygbuild  libsox_ng.3  libsox_ng.txt  libtool  sox_ng.1  sox_ng.pc  sox_ng.pc.in  sox_ng.txt  soxformat_ng.7  soxformat_ng.txt  soxi_ng.1  soxi_ng.txt
issues/: .gitignore  README  clean.sh  getissues.sh  makehtml.sh
libgsm/: Makefile  Makefile.in  short_term.c
libgsm/.deps/: add.Plo  code.Plo  decode.Plo  gsm_create.Plo  gsm_decode.Plo  gsm_destroy.Plo  gsm_encode.Plo  gsm_option.Plo  long_term.Plo  lpc.Plo  preprocess.Plo  rpe.Plo  short_term.Plo  table.Plo
lpc10/: Makefile  Makefile.in  analys.c  bsynz.c  chanwr.c  dcbias.c  decode.c  deemp.c  difmag.c  dyptrk.c  encode.c  energy.c  ham84.c  hp100.c  invert.c  irc2pc.c  ivfilt.c  lpc10.h  lpcdec.c  lpcenc.c  lpcini.c  lpfilt.c  median.c  mload.c  onset.c  pitsyn.c  placea.c  placev.c  preemp.c  prepro.c  random.c  rcchk.c  synths.c  tbdm.c  voicin.c  vparms.c
lpc10/.deps/: analys.Plo  bsynz.Plo  chanwr.Plo  dcbias.Plo  decode.Plo  deemp.Plo  difmag.Plo  dyptrk.Plo  encode.Plo  energy.Plo  f2clib.Plo  ham84.Plo  hp100.Plo  invert.Plo  irc2pc.Plo  ivfilt.Plo  lpcdec.Plo  lpcenc.Plo  lpcini.Plo  lpfilt.Plo  median.Plo  mload.Plo  onset.Plo  pitsyn.Plo  placea.Plo  placev.Plo  preemp.Plo  prepro.Plo  random.Plo  rcchk.Plo  synths.Plo  tbdm.Plo  voicin.Plo  vparms.Plo
m4/: optional-fmt.m4
msvc10/: Makefile  Makefile.in
msvc9/: Makefile  Makefile.in
scripts/: batch-example.bat
src/: 8svx.c  Makefile  Makefile.am  Makefile.in  adpcm.c  adpcm.h  aiff.c  amr-nb.c  amr-wb.c  ao.c  au.c  coreaudio.c  dcshift.c  dft_filter.h  dither.c  dither.h  effects.h  example0.c  example1.c  example2.c  example3.c  example4.c  example5.c  example6.c  fft4g.c  fft4g.h  flac.c  formats.c  formats_i.c  getopt.c  hcom.c  ima_rw.h  mp3-util.h  mp3.c  optional-fmts.am  opus.c  pulseaudio.c  sf.c  silence.c  sndfile.c  (+23 more)
src/.deps/: example0.Po  example1.Po  example2.Po  example3.Po  example4.Po  example5.Po  example6.Po  libsox_ng_la-8svx.Plo  libsox_ng_la-adpcm.Plo  libsox_ng_la-adpcms.Plo  libsox_ng_la-aifc-fmt.Plo  libsox_ng_la-aiff-fmt.Plo  libsox_ng_la-aiff.Plo  libsox_ng_la-al-fmt.Plo  libsox_ng_la-au.Plo  libsox_ng_la-avr.Plo  libsox_ng_la-bend.Plo  libsox_ng_la-biquad.Plo  libsox_ng_la-biquads.Plo  libsox_ng_la-caf.Plo  libsox_ng_la-cdr.Plo  libsox_ng_la-chorus.Plo  libsox_ng_la-compand.Plo  libsox_ng_la-compandt.Plo  libsox_ng_la-contrast.Plo  libsox_ng_la-coreaudio.Plo  libsox_ng_la-cvsd-fmt.Plo  libsox_ng_la-cvsd.Plo  libsox_ng_la-dat.Plo  libsox_ng_la-dcshift.Plo  libsox_ng_la-delay.Plo  libsox_ng_la-dft_filter.Plo  libsox_ng_la-dither.Plo  libsox_ng_la-divide.Plo  libsox_ng_la-downsample.Plo  libsox_ng_la-dvms-fmt.Plo  libsox_ng_la-earwax.Plo  libsox_ng_la-echo.Plo  libsox_ng_la-echos.Plo  libsox_ng_la-effects.Plo  (+102 more)
test/: README  check.sh  run
test/BUG-298/: run  sox-doublefree.patch
test/BUG-334/: SEGV-rate_close-rate-504  run
test/CVE-2004-0557/: run
test/CVE-2014-8145/: NOTES
test/CVE-2017-11332/: run
test/CVE-2017-11333/: run
test/CVE-2017-11358/: CVE-2017-11358.patch  run  sox_14.4.2_invalid_memory_read.hcom
test/CVE-2017-11359/: run  sox_14.4.2_divide_by_zero_error_2.snd
test/CVE-2017-15370/: 0001-wav-adpcm-stricter-header-validation-bug-265.patch  run
test/CVE-2017-15371/: run
test/CVE-2017-15372/: run
test/CVE-2017-15642/: poc  run
test/CVE-2017-18189/: 0001-xa-validate-channel-count-CVE-2017-18189.patch  poc.aiff  run
test/CVE-2019-1010004/: poc.xa  run  txt2xa.c
test/CVE-2019-13590/: 0001-sox-fmt-validate-comments_bytes-before-use-CVE-2019.patch  run
test/CVE-2019-8354/: 0001-fix-possible-buffer-size-overflow-in-lsx_make_lpf.patch  0002-rate-add-some-sanity-checking.patch  run
test/CVE-2019-8355/: run
test/CVE-2019-8356/: 0001-fft4g-bail-if-size-too-large-CVE-2019-8356.patch  run
test/CVE-2019-8357/: 0001-Clean-up-lsx_malloc-and-friends-fixed.patch  0001-fix-possible-null-pointer-deref-in-lsx_make_lpf-CVE-.patch  run
test/CVE-2021-23159/: bug4  run
test/CVE-2021-23172/: bug2  run
test/CVE-2021-23210/: bug3  run
test/CVE-2021-33844/: bug1  run
test/CVE-2021-3643/: run
test/CVE-2021-40426/: poc40426.c  poc40426.sph  run
test/CVE-2022-31650/: poc_fpe_lsx_aiffstartwrite  run
test/CVE-2022-31651/: poc_assert_rate_init  run
test/CVE-2023-26590/: poc_file  run
test/CVE-2023-32627/: poc_file  run
test/CVE-2023-34318/: poc_file  run
test/CVE-2023-34432/: poc_file  run
test/Fedora-1226675/: README  run.sh
test/spectrogram_-x/: 0001-Fix-signedness-of-spectrogram-label-position-calcula.patch  0001-spectrogram-fix-crash-if-pixels-per-second-exceeds-s.patch  run
test/wavpack-errors/: poc  run
wiki/: Accounting.html  Accounting.md  Architecture.html  Architecture.md  BUGS.html  BUGS.md  Backups.html  Backups.md  Bounties.html  Bounties.md  Compiler-warnings.html  Compiler-warnings.md  Copyright.html  Copyright.md  Distro-80x24.html  Distro-80x24.md  Distro-AIX.html  Distro-AIX.md  Distro-ALTLinux.html  Distro-ALTLinux.md  Distro-Alpine.html  Distro-Alpine.md  Distro-Arch.html  Distro-Arch.md  Distro-Artix.html  Distro-Artix.md  Distro-CRUX.html  Distro-CRUX.md  Distro-CentOS.html  Distro-CentOS.md  Distro-Debian.html  Distro-Debian.md  Distro-Fedora.html  Distro-Fedora.md  Distro-FreeBSD.html  Distro-FreeBSD.md  Distro-Gentoo.html  Distro-Gentoo.md  Distro-OpenBSD.html  Distro-OpenBSD.md  (+33 more)
wiki/patches/: Debian-Add-opus-format.patch  Debian-Add-sndio-format.patch  libao-fix-on-AIX.patch
